Updated User Repo - Mongoose
